Updated ouput models
Modified swagger docs
