# app/api/controller/v1/todo_controller.go
@@ -4,9 +4,9 @@ import (
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
 	"github.com/mecitsemerci/clean-go-todo-api/app/api/controller"
+	"github.com/mecitsemerci/clean-go-todo-api/app/api/dto"
 	todoDto "github.com/mecitsemerci/clean-go-todo-api/app/api/dto/todo"
 	"github.com/mecitsemerci/clean-go-todo-api/app/core/services"
-	"github.com/swaggo/swag/example/celler/httputil"
 	"net/http"
 )
 
@@ -33,22 +33,23 @@ func (controller *TodoController) RegisterRoutes(apiRouteGroup *gin.RouterGroup)
 // @Accept json
 // @Produce json
 // @Success 200 {array} todoDto.TodoOutput
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 422 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} dto.ErrorOutput
+// @Failure 422 {object} dto.ErrorOutput
+// @Failure 500 {object} dto.ErrorOutput
 // @Router /api/v1/todo [get]
 func (controller *TodoController) FindAll(ctx *gin.Context) {
-	if todoList, err := controller.TodoService.GetAll(); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+	todoList, err := controller.TodoService.GetAll()
+
+	if err != nil {
+		dto.NewErrorOutput(ctx, http.StatusUnprocessableEntity, "Something went wrong!", err)
 		return
-	} else {
-		var result []todoDto.TodoOutput
-		todoOutputDto := todoDto.TodoOutput{}
-		for _, entity := range todoList {
-			result = append(result, todoOutputDto.FromEntity(entity))
-		}
-		ctx.JSON(http.StatusOK, result)
 	}
+	var result []todoDto.TodoOutput
+	todoOutputDto := todoDto.TodoOutput{}
+	for _, entity := range todoList {
+		result = append(result, todoOutputDto.FromEntity(entity))
+	}
+	ctx.JSON(http.StatusOK, result)
 }
 
 // Find Todo godoc
@@ -59,23 +60,23 @@ func (controller *TodoController) FindAll(ctx *gin.Context) {
 // @Produce json
 // @Param id path string true "Todo Id"
 // @Success 200 {object} todoDto.TodoOutput
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 422 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} dto.ErrorOutput
+// @Failure 404 {object} dto.ErrorOutput
+// @Failure 500 {object} dto.ErrorOutput
 // @Router /api/v1/todo/{id} [get]
 func (controller *TodoController) Find(ctx *gin.Context) {
 
 	todoId, err := uuid.Parse(ctx.Param("id"))
 
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		dto.NewErrorOutput(ctx, http.StatusBadRequest, "Id is invalid.", err)
 		return
 	}
 
 	todoEntity, err := controller.TodoService.Find(todoId)
 
 	if err != nil {
-		httputil.NewError(ctx, http.StatusUnprocessableEntity, err)
+		dto.NewErrorOutput(ctx, http.StatusNotFound, "Item is not exist.", err)
 		return
 	}
 
@@ -92,21 +93,21 @@ func (controller *TodoController) Find(ctx *gin.Context) {
 // @Produce  json
 // @Param account body todoDto.CreateTodoInput true "Create todo"
 // @Success 200 {object} todoDto.CreateTodoOutput
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 422 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} dto.ErrorOutput
+// @Failure 422 {object} dto.ErrorOutput
+// @Failure 500 {object} dto.ErrorOutput
 // @Router /api/v1/todo/ [post]
 func (controller *TodoController) Create(ctx *gin.Context) {
 	var createTodoInput todoDto.CreateTodoInput
 	if err := ctx.ShouldBindJSON(&createTodoInput); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		dto.NewErrorOutput(ctx, http.StatusBadRequest, "Request model is invalid.", err)
 		return
 	}
 
 	todoId, err := controller.TodoService.Create(createTodoInput.ToEntity())
 
 	if err != nil {
-		httputil.NewError(ctx, http.StatusUnprocessableEntity, err)
+		dto.NewErrorOutput(ctx, http.StatusUnprocessableEntity, "The item failed to create.", err)
 		return
 	}
 
@@ -124,32 +125,32 @@ func (controller *TodoController) Create(ctx *gin.Context) {
 // @Produce  json
 // @Param id path string true "Todo Id"
 // @Param account body todoDto.UpdateTodoInput true "Update todo"
-// @Success 200 {object} todoDto.TodoOutput
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 422 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Success 204 {object} todoDto.TodoOutput
+// @Failure 400 {object} dto.ErrorOutput
+// @Failure 404 {object} dto.ErrorOutput
+// @Failure 500 {object} dto.ErrorOutput
 // @Router /api/v1/todo/{id} [put]
 func (controller *TodoController) Update(ctx *gin.Context) {
 
 	todoId, err := uuid.Parse(ctx.Param("id"))
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		dto.NewErrorOutput(ctx, http.StatusBadRequest, "Id is invalid.", err)
 		return
 	}
 	var updateTodoInput todoDto.UpdateTodoInput
 	if err := ctx.ShouldBindJSON(&updateTodoInput); err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		dto.NewErrorOutput(ctx, http.StatusBadRequest, "Request model is invalid.", err)
 		return
 	}
 
-	isUpdated, err := controller.TodoService.Update(updateTodoInput.ToEntity(todoId))
+	err = controller.TodoService.Update(updateTodoInput.ToEntity(todoId))
 
-	if err != nil || !isUpdated {
-		httputil.NewError(ctx, http.StatusNotFound, err)
+	if err != nil {
+		dto.NewErrorOutput(ctx, http.StatusNotFound, "The item failed to update.", err)
 		return
 	}
 
-	ctx.JSON(http.StatusOK, gin.H{})
+	ctx.JSON(http.StatusNoContent, gin.H{})
 
 }
 
@@ -161,25 +162,24 @@ func (controller *TodoController) Update(ctx *gin.Context) {
 // @Produce  json
 // @Param id path string true "Todo Id"
 // @Success 204 {object} todoDto.TodoOutput
-// @Failure 400 {object} httputil.HTTPError
-// @Failure 422 {object} httputil.HTTPError
-// @Failure 500 {object} httputil.HTTPError
+// @Failure 400 {object} dto.ErrorOutput
+// @Failure 404 {object} dto.ErrorOutput
+// @Failure 500 {object} dto.ErrorOutput
 // @Router /api/v1/todo/{id} [delete]
 func (controller *TodoController) Delete(ctx *gin.Context) {
 
 	todoId, err := uuid.Parse(ctx.Param("id"))
 	if err != nil {
-		httputil.NewError(ctx, http.StatusBadRequest, err)
+		dto.NewErrorOutput(ctx, http.StatusBadRequest, "Id is invalid.", err)
 		return
 	}
 
-	isDeleted, err := controller.TodoService.Delete(todoId)
+	err = controller.TodoService.Delete(todoId)
 
-	if err != nil || !isDeleted {
-		httputil.NewError(ctx, http.StatusNotFound, err)
+	if err != nil {
+		dto.NewErrorOutput(ctx, http.StatusNotFound, "The item failed to delete.", err)
 		return
 	}
 
-	ctx.JSON(http.StatusNotFound, gin.H{})
-
+	ctx.JSON(http.StatusOK, gin.H{})
 }
